[tool.poetry]
name = "ipywidgets_toggle_buttons"
version = "0.1.0"
description = ""
authors = ["stanislav <stas.prokopiev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
