[tool.poetry]
name = "ipywidgets_toggle_buttons"
version = "0.1.8"
description = "PYPI package with better toggle buttons"
authors = ["stanislav <stas.prokopiev@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/stas-prokopiev/ipywidgets_toggle_buttons"
license="MIT"

[tool.poetry.dependencies]
python = "^3.6"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "5.5.5"
pytest-cov = "^2.12.1"
pytest-html = "^3.1.1"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
